refactor(nutrition-service): Integrate Recipe Service API in Nutrition Service